--- a/copy_styles.css
+++ b/copy_styles.css
@@ -109,7 +109,7 @@ body {
 h1 {
     display: inline;
     padding: 10px;
-    font-size: 4em;
+    font-size: 2em;
 }
 
 .nav-1 {
@@ -131,5 +131,5 @@ h1 {
 
 footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
